front/src/components/atoms/Container/styles.scss
.container {
  padding: 28px 20px;
  background-color: #fff;
  margin-top: 24px;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;

  &__wrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 24px;
  }
}

@media only screen and (min-width: 992px) {
  .container__wrapper {
    width: 500px;
    margin: 0 auto;
  }
}

